<resources>
    <string name="app_name">MovieApps</string>
    <string name="title_movie">Judul Movie</string>
    <string name="popular">Popular Movie</string>
    <string name="top_movie">Top Movie</string>
    <string name="coming_soon">Coming Soon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deskripsi">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="trailer">Trailer</string>
    <string name="review">Review</string>
    <string name="empty_review">Empty Review</string>
    <string name="view_all_review">View All Review</string>
    <string name="filter">Filter</string>
    <string name="the_movie">The Movie</string>
    <string name="home">Home</string>
    <string name="genre">Genre</string>
</resources>