<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_coming_soon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coming_soon"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_margin="8dp"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"/>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/lyt_coming_soon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@id/txt_coming_soon">

                    <include
                        android:id="@+id/inc_coming_soon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        layout="@layout/layout_comming_soon"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/txt_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/lyt_coming_soon"
                    android:layout_margin="8dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/txt_popular"
                    tools:listitem="@layout/item_movie_home"
                    tools:itemCount="1"/>

                <TextView
                    android:id="@+id/txt_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/top_movie"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/rv_popular"
                    android:layout_margin="8dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/txt_top"
                    tools:listitem="@layout/item_movie_home"
                    tools:itemCount="1"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>