<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.splashscreen.SplashScrennActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_movie"
                    android:textSize="14sp"
                    android:textColor="#d4d4d4"
                    android:textStyle="bold"
                    android:background="#d4d4d4"
                    android:layout_marginTop="40dp"
                    android:layout_marginHorizontal="16dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:layout_marginTop="16dp">


                    <androidx.cardview.widget.CardView
                        android:id="@+id/crd_image"
                        android:layout_width="140dp"
                        android:layout_height="0dp"
                        app:cardElevation="0dp"
                        app:layout_constraintDimensionRatio="1:1.5"
                        app:cardCornerRadius="10dp"
                        app:cardBackgroundColor="#d4d4d4"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        >

                        <ImageView
                            android:id="@+id/img_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:background="#d4d4d4"/>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/txt_content"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginVertical="16dp"
                        android:background="#d4d4d4"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/crd_image"
                        app:layout_constraintLeft_toRightOf="@id/crd_image"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginStart="8dp"
                        android:textSize="12sp"
                        android:text="@string/deskripsi"
                        android:textColor="#d4d4d4"/>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/txt_trailer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/trailer"
                        android:textSize="16sp"
                        android:background="#d4d4d4"
                        android:textColor="#d4d4d4"
                        android:textStyle="bold"/>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/crd_trailer"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:cardElevation="0dp"
                        app:layout_constraintDimensionRatio="1:0.5"
                        app:cardCornerRadius="10dp"
                        android:layout_marginTop="8dp"
                        app:cardBackgroundColor="#d4d4d4"
                        app:layout_constraintTop_toBottomOf="@id/txt_trailer"
                        >

                        <ImageView
                            android:id="@+id/img_trailer"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:background="#d4d4d4"/>


                    </androidx.cardview.widget.CardView>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:background="#55d4d4d4"
                        app:layout_constraintTop_toTopOf="@id/crd_trailer"
                        app:layout_constraintBottom_toBottomOf="@id/crd_trailer"/>


                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:layout_constraintTop_toTopOf="@id/crd_trailer"
                        app:layout_constraintBottom_toBottomOf="@id/crd_trailer"
                        app:layout_constraintLeft_toLeftOf="@id/crd_trailer"
                        app:layout_constraintRight_toRightOf="@id/crd_trailer"
                        android:src="@drawable/ic_play"
                        app:tint="@color/white" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    >

                    <TextView
                        android:id="@+id/txt_review"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/review"
                        android:textStyle="bold"
                        android:textColor="#d4d4d4"
                        android:background="#d4d4d4"
                        app:layout_constraintTop_toTopOf="parent"
                        />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>