<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.splashscreen.SplashScrennActivity">


    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1.34"
        android:src="@drawable/movieposter"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1.34"
        android:src="#99000000"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1.34"
        android:src="#22000000"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/img_poster"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:0.9"
        android:background="@drawable/gradien_color"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"
        app:layout_constraintBottom_toBottomOf="parent"/>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="54dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingVertical="12dp"
                android:src="@drawable/ic_arrow_left"
                app:tint="@color/white" />


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/txt_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_movie"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_marginTop="40dp"
                            android:layout_marginHorizontal="16dp"/>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="16dp"
                            android:layout_marginTop="16dp">


                            <androidx.cardview.widget.CardView
                                android:id="@+id/crd_image"
                                android:layout_width="140dp"
                                android:layout_height="0dp"
                                app:cardElevation="0dp"
                                app:layout_constraintDimensionRatio="1:1.5"
                                app:cardCornerRadius="10dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                >

                                <ImageView
                                    android:id="@+id/img_image"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/movieposter"/>

                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:id="@+id/txt_content"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:paddingVertical="16dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="@id/crd_image"
                                app:layout_constraintLeft_toRightOf="@id/crd_image"
                                app:layout_constraintRight_toRightOf="parent"
                                android:layout_marginStart="8dp"
                                android:textSize="12sp"
                                android:text="@string/deskripsi"
                                android:textColor="@color/white"/>


                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="16dp"
                            android:layout_marginTop="16dp">

                            <TextView
                                android:id="@+id/txt_trailer"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:layout_constraintTop_toTopOf="parent"
                                android:text="@string/trailer"
                                android:textSize="16sp"
                                android:textColor="@color/white"
                                android:textStyle="bold"/>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/crd_trailer"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                app:cardElevation="0dp"
                                app:layout_constraintDimensionRatio="1:0.5"
                                app:cardCornerRadius="10dp"
                                android:layout_marginTop="8dp"
                                app:layout_constraintTop_toBottomOf="@id/txt_trailer"
                                >

                                <ImageView
                                    android:id="@+id/img_trailer"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:src="@drawable/movieposter"
                                    android:scaleType="centerCrop"/>


                            </androidx.cardview.widget.CardView>


                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:background="#55000000"
                                app:layout_constraintTop_toTopOf="@id/crd_trailer"
                                app:layout_constraintBottom_toBottomOf="@id/crd_trailer"/>


                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                app:layout_constraintTop_toTopOf="@id/crd_trailer"
                                app:layout_constraintBottom_toBottomOf="@id/crd_trailer"
                                app:layout_constraintLeft_toLeftOf="@id/crd_trailer"
                                app:layout_constraintRight_toRightOf="@id/crd_trailer"
                                android:src="@drawable/ic_play"
                                app:tint="@color/white" />

                        </androidx.constraintlayout.widget.ConstraintLayout>


                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="16dp"
                            >

                            <TextView
                                android:id="@+id/txt_review"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/review"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                app:layout_constraintTop_toTopOf="parent"
                                />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rv_review"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:layout_constraintTop_toBottomOf="@id/txt_review"
                                android:layout_marginTop="8dp"
                                android:nestedScrollingEnabled="false"
                                tools:listitem="@layout/item_review_user"
                                tools:itemCount="1"/>

                            <TextView
                                android:id="@+id/txt_view_more_review"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/view_all_review"
                                app:layout_constraintTop_toBottomOf="@id/rv_review"
                                android:textStyle="bold"
                                android:visibility="gone"
                                android:textColor="@color/white"
                                android:paddingVertical="8dp"/>

                            <include
                                android:id="@+id/inc_review_empty"
                                layout="@layout/layout_review_empty"
                                app:layout_constraintTop_toBottomOf="@id/txt_review"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:layout_marginTop="8dp"
                                />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>